--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.application.name=Gate
 eureka.client.service-url.defaultZone=http://192.168.1.71:8761/eureka
+spring.jackson.parser.allow-missing-values=true
